kubernetes/apps/homarr.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homarr
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homarr
  template:
    metadata:
      labels:
        app: homarr
    spec:
      containers:
      - name: homarr
        image: ghcr.io/homarr-labs/homarr:v1.74.0
        ports:
        - containerPort: 7575
        volumeMounts:
        - name: data
          mountPath: /appdata
        resources:
          requests:
            cpu: 200m
            memory: 256Mi
          limits:
            cpu: 1000m
            memory: 1536Mi
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: homarr-data
---
apiVersion: v1
kind: Service
metadata:
  name: homarr-svc
  namespace: default
spec:
  type: NodePort
  selector:
    app: homarr
  ports:
  - port: 80
    targetPort: 7575
    nodePort: 30085
