kubernetes/apps/homebox.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homebox
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homebox
  template:
    metadata:
      labels:
        app: homebox
    spec:
      containers:
      - name: homebox
        image: ghcr.io/sysadminsmedia/homebox:latest
        ports:
        - containerPort: 7745
        volumeMounts:
        - name: data
          mountPath: /data
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: homebox-data
---
apiVersion: v1
kind: Service
metadata:
  name: homebox-svc
  namespace: default
spec:
  type: NodePort
  selector:
    app: homebox
  ports:
  - port: 80
    targetPort: 7745
    nodePort: 30086
