kubernetes/apps/kanboard.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kanboard
  namespace: tools
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: kanboard
  template:
    metadata:
      labels:
        app: kanboard
    spec:
      containers:
      - name: kanboard
        image: kanboard/kanboard:v1.2.43
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop: ["ALL"]
          seccompProfile:
            type: RuntimeDefault
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
          limits:
            cpu: 300m
            memory: 256Mi
        volumeMounts:
        - name: data
          mountPath: /var/www/app/data
          subPath: data
        - name: data
          mountPath: /var/www/app/plugins
          subPath: plugins
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: kanboard-data
---
apiVersion: v1
kind: Service
metadata:
  name: kanboard-svc
  namespace: tools
spec:
  type: NodePort
  selector:
    app: kanboard
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30084
