kubernetes/apps/omni-tools.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: omni-tools
  namespace: tools
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: omni-tools
  template:
    metadata:
      labels:
        app: omni-tools
    spec:
      containers:
      - name: omni-tools
        image: iib0011/omni-tools:0.6.0
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
          limits:
            cpu: 300m
            memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: omni-tools-svc
  namespace: tools
spec:
  type: NodePort
  selector:
    app: omni-tools
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30085
